# DoorCam

./: .gitignore  Cargo.toml  Config.toml  README.md  Rocket.toml  Setup.md  clippy.toml  db_template.sqlite  generate_db_template.sh  logger.yaml  scheme.sql
.github/workflows/: rust.yml
docs/: Setup.md  Structure.md  Technologies.md
src/: crypto.rs  db_conn.rs  door_requests.rs  error_request.rs  guards.rs  index_view.rs  main.rs  user_auth.rs  user_entry.rs  user_requests.rs
src/db_entry/: connection_test.rs  flat.rs  flat_test.rs  mod.rs  user.rs  user_session.rs  user_session_test.rs  user_test.rs  user_type.rs  user_type_test.rs
src/iot/: bell_button.rs  door_control.rs  door_control_test.rs  event_handler.rs  mod.rs
src/requests/: door.rs  flat.rs  index_view.rs  mod.rs  user.rs  user_auth.rs
src/template_contexts/: flat_contexts.rs  flat_contexts_test.rs  mod.rs  template_test.rs  user_contexts.rs  user_contexts_test.rs
src/utils/: auth_manager.rs  config.rs  config_test.rs  crypto.rs  crypto_test.rs  guards.rs  guards_test.rs  mod.rs  serde.rs
src/utils/crypto/: mod.rs  plaintext.rs  plaintext_test.rs
static/: background.css  functions.js  style.css  style.scss
static/fonts/: roboto.css
templates/: 404.html.tera  admin_base.html.tera  admin_details.html.tera  admin_view.html.tera  base.html.tera  cam.html.tera  error.html.tera  flat_details.html.tera  flat_overview.html.tera  login.html.tera  main_view.html.tera  user_create.html.tera  user_details.html.tera  user_login.html.tera  user_overview.html.tera
