[package]
name = "doorcam"
version = "0.1.0"
authors = ["TheAlgorythm <mos-news@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
iot = ["rust_gpiozero", "rumqttc"]

# TODO https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html of rocket_contrib regarding rusqlite's feature bundled and newer Tera-Version

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.13"
blake2 = "0.9"
passwords = "3.1"
rumqttc = { version = "0.5", optional = true }
rust_gpiozero = { version = "0.2.0", optional = true }
log4rs = "1.0"
log = "0.4.11"
rsevents = "0.2.1"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["serve", "tera_templates", "sqlite_pool", "helmet"]

[dev-dependencies]
matches = "0.1"
