[package]
name = "doorcam"
version = "0.1.0"
authors = ["TheAlgorythm <mos-news@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
iot = ["rppal"]

# TODO https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html of rocket_contrib regarding rusqlite's feature bundled and newer Tera-Version

[dependencies]
rocket = "~0.4"
rusqlite = { version = "0.14.0", features = ["chrono"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_with = { version = "~2.0", features = ["hex"] }
duration-str = "~0.4"
rand = "~0.8"
rand_chacha = "~0.3"
aes = "~0.8"
pcbc = { version = "~0.1", features = ["std"] }
base64 = "~0.13"
argon2 = "~0.4"
passwords = "~3.1"
rumqttc = "~0.10"
rppal = { version = "~0.13", optional = true }
log4rs = "~1.1"
log = "~0.4"
rsevents = "~0.3"
config = "~0.13"
lazy_static = "~1.4"
either = "~1.8"
thiserror = "~1.0"
derive-try-from-primitive = "~1.0"
bool_ext = "~0.5"
easy-ext = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "~0.4"
default-features = false
features = ["serve", "tera_templates", "sqlite_pool", "helmet"]

[dev-dependencies]
matches = "~0.1"
maplit = "~1.0"
